# online-cinema-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 221fe45affd9_create_accounts_tables.py  48270b1408b0_create_movies_and_genres_tables.py  830c55ce9a47_seed_user_groups.py  ca2fb2763d26_create_accounts_tables.py  d617cbaaacd9_create_orders_tables.py  db81f74d1e48_create_cart_tables.py
app/: main.py
app/accounts/: celery_app.py  dependencies.py  models.py  routes.py  schemas.py  services.py  token_cleanup.py
app/carts/: models.py  routes.py  schemas.py  services.py
app/movies/: models.py  routes.py  schemas.py  services.py
app/orders/: models.py  routes.py  schemas.py  services.py
app/security/: tokens.py  utils.py
db/: dependencies.py  engine.py
tests/: conftest.py  helpers.py  test_accounts.py  test_cart.py  test_orders.py
